# varipand

./: README.md  pyproject.toml
tests/: test_varipand.py
varipand/: __init__.py  expand.py
