[tool.poetry]
name = "varipand"
version = "0.1.0"
description = "Expand a compressed form of different variations of a sentence"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
